1.changed Print method, intruduced a PrintClass to use "DebugMode" 2. setup the batchRun parameters for AgentDiversity

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,3 +16,7 @@
 /config_task1.0.properties
 /config_task_TO0.25HP33AP33
 /config_types.properties
+/config_task_TO0.0HP33AP33
+/config_task_TO0.5HP33AP33
+/config_task_TO0.75HP33AP33
+/config_task_TO1.0HP33AP33
